<resources>
    <string name="app_name">7.3 畫廊</string>
    <string name="myname">2號 許筱昀</string>
    <string name="action_settings">結束</string>
    <string name="noback">禁用返回鍵</string>
    <string name="m0703_alpha">漸變透明度動畫效果</string>
    <string name="m0703_trans">畫面轉換位置移動動畫效果</string>
    <string name="m0703_rotate">漸變尺寸伸縮動畫效果,畫面轉移旋轉動畫效果</string>
    <string name="m0703_bounce">畫面動畫彈跳效果</string>
    <string name="Alpha">漸變透明度動畫效果</string>
    <string name="item05">自定義特效</string>

</resources>